--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
     background-color: #E3CAA5;
     color: #AD8B73;
-    font-family: Avenir;
+    font-family: Helvetica;
     font-size: 16px;
     
 }
@@ -17,7 +17,7 @@ h1{
 
 h2{
  color: #876445;
- font-family: Avenir next;
+ font-family: Helvetica;
  font-size: 24px; 
  font-weight: lighter;
 
